--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "nodemon src/index.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "multer": "^1.4.2",
+    "nodemon": "2.0.7"
   },
   "devDependencies": {
     "nodemon": "1.18.4"
